# cuda_dnn

./: Cargo.toml  build.rs
src/: bind_ffi.rs  ffi.rs  lib.rs  new.rs  old.rs
src/ffi/: _cudnn.rs
src/v3/: mod.rs
src/v4/: ffi.rs  mod.rs
src/v5/: ffi.rs  mod.rs
tests/: cudnn_cudart_version.rs
