[package]
name = "cuda_dnn"
version = "0.2.0"
authors = ["Peter Jin <peterhaijin@gmail.com>"]
license = "BSD-2-Clause"
description = "cuDNN API bindings."
repository = "https://github.com/peterhj/cuda_dnn"
keywords = ["cuda", "cudnn"]

[features]
default = []
f16 = ["float"]

[build-dependencies]
bindgen = "^0.38"

[lib]
name = "cuda_dnn"
path = "src/lib.rs"

[dependencies]
cuda = "^0.2"
float = { version = "^0.1", optional = true }
num-traits = "^0.2"
