[package]
name = "cuda_dnn"
version = "0.2.0-devel"
edition = "2018"
authors = ["Peter Jin <peterhaijin@gmail.com>"]
license = "BSD-2-Clause"
description = "cuDNN API bindings."
repository = "https://github.com/peterhj/cuda_dnn"
keywords = ["cuda", "cudnn"]

[features]
default = []
fresh = ["bindgen"]
f16 = []
#cudnn_7_0 = []
#cudnn_7_1 = []
#cudnn_7_2 = []
#cudnn_7_3 = []
#cudnn_7_4 = []

[build-dependencies]
bindgen = { version = "^0.46", optional = true }

[lib]
name = "cuda_dnn"
path = "src/lib.rs"

[dependencies]
cuda = { git = "https://github.com/peterhj/libcuda", features = ["cuda_10_0"] }
num-traits = "^0.2"
